@@ -5,7 +5,6 @@ exports.normalizedHeaderName = normalizedHeaderName;
 exports.canonicalHeaderName = canonicalHeaderName;
 exports.capitalizedHeaderName = capitalizedHeaderName;
 exports.httpPropertyName = httpPropertyName;
-exports.reverseHttpPropertyName = reversePropertyName;
 exports.byteSizeFormat = byteSizeFormat;
 exports.escapeHtml = escapeHtml;
 exports.escapeRe = escapeRe;
@@ -65,9 +64,7 @@ function normalizedHeaderName(name) {
  * "x-forwarded-ssl" => "X-Forwarded-Ssl"
  */
 function canonicalHeaderName(name) {
-    var norm = normalizedHeaderName(name);
-
-    return norm.replace(/(^|-)([a-z])/g, function (s, a, b) {
+    return normalizedHeaderName(name).replace(/(^|-)([a-z])/g, function (s, a, b) {
         return a + b.toUpperCase();
     });
 }
@@ -94,22 +91,6 @@ function capitalizedHeaderName(name) {
  */
 function httpPropertyName(name) {
     return "http" + capitalizedHeaderName(name);
-}
-
-/**
- * Derives the normalized form of the original header name from the http*
- * property `name`.
- *
- * "httpAccept" => "accept"
- * "httpContentType" => "content-type"
- * "httpXForwardedSsl" => "x-forwarded-ssl"
- */
-function reversePropertyName(name) {
-    var dashed = name.substring(4).replace(/(.)([A-Z])/g, function (s, a, b) {
-        return a + "-" + b;
-    });
-
-    return normalizedHeaderName(dashed);
 }
 
 /**
